istio/03_traffic_management/virtual_service_and_destination_rules/examples/destination_rule_subsets.yaml

# defines subsets for version-specific routing

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-service
spec:
  host: my-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---
